Sun Jun  3 18:08:39 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Configuration_Import_Export.cpp,
	* ace/Configuration.cpp: Added ACE_ASSERTS to make sure that
	  open() is called...  Thanks to Jerry Odenwelder
 	  <jerry.o@mindspring.com> for fixing this.

Sat Jun  2 13:05:20 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Connector.cpp: Removed the ACE_Errno_Guard from the
	  create_AST() method and instead have the connect_i() method
 	  check to see if create_AST() succeeded and explicitly set errno
 	  = EWOULDBLOCK in this case.  Thanks to Boris Temkin
 	  <borist@allcharge.com> for motivating this change.

	* ace/Timer_Wheel_T.cpp: Since we removed the call to
	  is_empty() from earliest_time() we need to modify the code in
 	  reschedule() to test for is_empty.

	* tests/Cached_Accept_Conn_Test.cpp (accept_svc_handler): Use the
	  ACE_Accept_Strategy::acceptor() accessor method rather than
 	  accessing the acceptor_ directly.

	* TAO/rules.tao.GNU (TAO_IDL_DEP),
	* include/makeinclude/rules.local.GNU: Added support for the new EXEEXT
	  Makefile macro.  Thanks to Cristian Ferretti
 	  <cristian_ferretti@yahoo.com> for pointing this out.

	* include/makeinclude/platform_gnuwin32_common.GNU: Added a number of
	  fixes for the mingw platform.  Thanks to Cristian Ferretti
 	  <cristian_ferretti@yahoo.com> for pointing this out.

	* ace/Configuration.{h,cpp}: "Un-inlined" the == and != operators for 
	  the ACE_Configuration_Win32Registry class.
	
	* ace/Configuration.cpp (get_binary_value): Changed the type of "data"
	  from "unsigned char" to "BYTE".  Thanks to Cristian Ferretti
 	  <cristian_ferretti@yahoo.com> for pointing this out.

	* ace/config-win32-mingw.h: Removed the #define ACE_AS_STATIC_LIBS
	  macro.  Thanks to Cristian Ferretti
 	  <cristian_ferretti@yahoo.com> for pointing this out.

	* ace/config-win32-common.h: Protect certain DLL export macros with
	  #if !defined (__MINGW32__).  Thanks to Cristian Ferretti